infrastructure/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: GatewayClass
metadata:
  name: my-istio-gatewayclass
spec:
  controllerName: istio.io/gateway-controller
